History section added

--- a/style.css
+++ b/style.css
@@ -100,3 +100,144 @@ body {
     opacity: .95;
     margin: 0;
 }
+
+/* Main Layout */
+.layout {
+    max-width: 1200px;
+    margin: -28px auto 48px;
+    padding: 0 16px;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 20px; 
+}
+
+/* cards grid left  */
+.cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
+}
+
+/* history right  */
+.history {
+    background: white;
+    border: 1px solid #e5e7eb;
+    border-radius: 12px;
+    box-shadow: 0 10px 30px rgba(2, 6, 23, 0.08);
+    padding: 12px 12px 6px;
+    margin-top: 60px;
+}
+
+.history-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 6px 6px 10px;
+    border-bottom: 1px solid #e5e7eb;
+}
+
+.history-header .title {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.history-header h2 {
+    font-size: 18px;
+    margin: 0;
+}
+
+.history-emoji {
+    font-size: 20px;
+}
+
+
+.btn {
+    cursor: pointer;
+    border: none;
+    border-radius: 50px;
+    padding: 8px 12px;
+    background: #00A63E;
+    color: white;
+    font-weight: 600;
+}
+
+.btn:active {
+    transform: translateY(1px);
+}
+
+.btn-clear {
+    background: #00A63E;
+    color: #ffffff;
+}
+
+/* History-list  */
+.history-list {
+        list-style: none;
+        margin: 10px 0 0;
+        padding: 0;
+        max-height: 540px;
+        overflow: auto;
+    }
+
+
+.history-list li {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 8px;
+    padding: 10px;
+    border-bottom: 1px solid #e5e7eb;
+    border-radius: 16px;
+}
+
+.history-list .service {
+    font-weight: 600;
+}
+
+.history-list .meta {
+    color: black;
+    font-size: 12px;
+}
+
+.history-list .empty{
+    text-align: center;
+    font-style: italic;
+}
+/* 
+/* Cards */
+.card {
+    background: #5C5C5C;
+    border: 1px solid #e5e7eb;
+    border-radius: 8px;
+    box-shadow: 0 10px 30px rgba(2, 6, 23, 0.08);
+    padding: 14px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.card-top {
+    display: flex;
+    gap: 10px;
+}
+
+.card-icon {
+    width: 40px;
+    height: 40px;
+    object-fit: contain;
+}
+
+.card-title-area {
+    flex: 1;
+}
+
+.card-title {
+    margin: 0;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.card-sub */
+
+
